--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Pokexgames Dex</title>
-  <!-- Tabulator CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@5.4.4/dist/css/tabulator.min.css">
+  <!-- Tabulator CSS (versión ligera) -->
+  <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@5.4.4/dist/css/tabulator_midnight.min.css">
   <!-- Nuestro CSS personalizado -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -17,11 +17,11 @@
     <div id="pokedex"></div>
   </main>
 
-  <!-- PapaParse -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
+  <!-- PapaParse (cargado de forma asíncrona) -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js" defer></script>
   <!-- Tabulator JS -->
-  <script src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js"></script>
+  <script src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js" defer></script>
   <!-- Nuestro script -->
-  <script src="main.js"></script>
+  <script src="main.js" defer></script>
 </body>
 </html>
