--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Pokexgames Dex</title>
-  <!-- Tabulator CSS (tema minimalista) -->
+  <!-- Tabulator CSS -->
   <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@5.4.4/dist/css/tabulator_midnight.min.css">
   <!-- Nuestro CSS -->
   <link rel="stylesheet" href="style.css">
@@ -13,17 +13,17 @@
     <h1>Pokexgames Dex</h1>
     <input type="text" id="search-input" placeholder="Buscar por nombre, número, forma, etc.">
   </header>
-  <main>
-    <div id="pokedex"></div>
-  </main>
 
-  <!-- Modal para ver el detalle de un Pokémon -->
-  <div id="modal-overlay">
-    <div id="modal-content">
-      <span id="modal-close">&times;</span>
-      <div id="modal-body"></div>
-    </div>
-  </div>
+  <!-- Sección de la tabla (scrollable) -->
+  <section id="table-view">
+    <div id="pokedex"></div>
+  </section>
+
+  <!-- Sección de detalle (vista pokédex) -->
+  <section id="detail-view">
+    <button id="back-button">&larr; Volver</button>
+    <div id="detail-content"></div>
+  </section>
 
   <!-- PapaParse -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js" defer></script>
