--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
   <header>
     <h1>Pokexgames Dex</h1>
-    <input type="text" id="search-input" placeholder="Buscar por nombre, número, forma, etc.">
+    <input type="text" id="search-input" placeholder="Buscar por nombre, número, forma, nivel, habilidades, movimientos, etc.">
   </header>
 
-  <!-- Sección de la tabla (scrollable) -->
+  <!-- Vista de la tabla con scroll -->
   <section id="table-view">
     <div id="pokedex"></div>
   </section>
 
-  <!-- Sección de detalle (vista pokédex) -->
+  <!-- Vista de detalle estilo pokédex (se muestra al hacer clic en una fila) -->
   <section id="detail-view">
     <button id="back-button">&larr; Volver</button>
     <div id="detail-content"></div>
