--- a/index.html
+++ b/index.html
@@ -3,28 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Pokexgames Dex</title>
-  <!-- Tabulator CSS (usa la versión que prefieras, aquí usamos el tema "midnight") -->
-  <link href="https://unpkg.com/tabulator-tables@5.5.0/dist/css/tabulator_midnight.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <!-- Tabulator CSS -->
+  <link href="https://unpkg.com/tabulator-tables@5.2.7/dist/css/tabulator.min.css" rel="stylesheet">
 </head>
 <body>
-  <header class="header">
+  <header>
     <h1>Pokexgames Dex</h1>
-    <input type="text" id="search-input" placeholder="Buscar por nombre, número, forma, elemento, habilidad, etc...">
+    <input type="text" id="search-input" placeholder="Buscar por número, nombre, forma, nivel, habilidades, movimientos, etc.">
   </header>
-
-  <!-- Contenedor para la tabla -->
-  <div id="pokedex"></div>
-
-  <!-- Vista detalle: oculta por defecto, se mostrará cuando se haga clic en una fila -->
-  <div id="pokedex-detail" class="hidden">
-    <button id="back-btn">← Volver a la lista</button>
-    <div id="detail-content"></div>
-  </div>
-
-  <!-- PapaParse y Tabulator -->
+  <main>
+    <div id="table-container"></div>
+    <div id="detail-view" class="hidden"></div>
+  </main>
+  <!-- PapaParse -->
   <script src="https://unpkg.com/papaparse@5.3.2/papaparse.min.js"></script>
-  <script src="https://unpkg.com/tabulator-tables@5.5.0/dist/js/tabulator.min.js"></script>
-  <script src="script.js"></script>
+  <!-- Tabulator JS -->
+  <script src="https://unpkg.com/tabulator-tables@5.2.7/dist/js/tabulator.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
