--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pokedex Animalista</title>
+  <title>Pokedex Animalista Retro</title>
+  <!-- Fuente retro estilo pixel -->
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <!-- PapaParse para parsear el CSV -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
@@ -12,7 +14,7 @@
 </head>
 <body>
   <header>
-    <h1>Pokedex Animalista</h1>
+    <h1>Pokedex Animalista Retro</h1>
     <div class="theme-toggle">
       <label for="theme-switch">Modo Oscuro:</label>
       <input type="checkbox" id="theme-switch">
@@ -27,15 +29,15 @@
     <section class="filters">
       <select id="generation-filter">
         <option value="">Todas las generaciones</option>
-        <!-- Se rellenará dinámicamente -->
+        <!-- Opciones generadas dinámicamente -->
       </select>
     </section>
     <section id="pokemon-container" class="pokemon-container">
-      <!-- Las tarjetas de Pokémon se mostrarán aquí -->
+      <!-- Se insertan las tarjetas de Pokémon -->
     </section>
   </main>
 
-  <!-- Modal de detalle estilo carta Pokémon -->
+  <!-- Modal estilo retro para mostrar la "carta" Pokémon -->
   <div id="pokemon-modal" class="modal">
     <div class="modal-content">
       <span id="modal-close" class="close">&times;</span>
